parametros en el path

--- a/src/app/pages/routing-params/routing-params.component.html
+++ b/src/app/pages/routing-params/routing-params.component.html
@@ -1,29 +1,34 @@
 <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div id="content" class="content content-full-width">
-          <div class="profile">
-            <div class="profile-header">
-              <div class="profile-header-cover"></div>
-              <div class="profile-header-content">
-                <div class="profile-header-img"> <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt=""></div>
-                <div class="profile-header-info">
-                  <h4 class="m-t-10 m-b-5">Sean Ngu</h4>
-                  <p class="m-b-10">UXUI + Frontend Developer</p> <a href="#" class="btn btn-xs btn-yellow">Edit Profile</a>
-                </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div id="content" class="content content-full-width">
+        <div class="profile">
+          <div class="profile-header">
+            <div class="profile-header-cover"></div>
+            <div class="profile-header-content">
+              <div class="profile-header-img"> <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
               </div>
-              <ul class="profile-header-tab nav nav-tabs">
-                <li class="nav-item"><a routerLink="posts" class="nav-link active show" data-toggle="tab">POSTS</a></li>
-                <li class="nav-item"><a routerLink="about" class="nav-link" data-toggle="tab">ABOUT</a></li>
-                <li class="nav-item"><a href="#profile-friends" class="nav-link" data-toggle="tab">FRIENDS</a></li>
-              </ul>
+              <div class="profile-header-info">
+                <h4 class="m-t-10 m-b-5">Sean Ngu</h4>
+                <p class="m-b-10">UXUI + Frontend Developer</p> <a href="#" class="btn btn-xs btn-yellow">Edit
+                  Profile</a>
+              </div>
             </div>
+            <ul class="profile-header-tab nav nav-tabs">
+              <li class="nav-item"><a routerLink="posts" class="nav-link active show" data-toggle="tab">POSTS</a></li>
+              <li class="nav-item"><a routerLink="about" class="nav-link" data-toggle="tab">ABOUT</a></li>
+              <li class="nav-item"><a [routerLink]="['friends', usuario.id]" class="nav-link"
+                  data-toggle="tab">FRIENDS</a>
+                <!--<a routerLink="friends/{{usuario.id}}" class="nav-link" data-toggle="tab">FRIENDS</a>-->
+              </li>
+            </ul>
           </div>
-          <div class="profile-content">
-            <router-outlet></router-outlet>
-   
-          </div>
+        </div>
+        <div class="profile-content">
+          <router-outlet></router-outlet>
+
         </div>
       </div>
     </div>
   </div>
+</div>
