--- a/src/app/modules/observable/observable.component.html
+++ b/src/app/modules/observable/observable.component.html
@@ -1,99 +1,151 @@
-
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
 <div class="container d-flex justify-content-center">
-  <div class="weather">
-    <div class="row">
-      <div class=" col-md-6">
-        <div class="card"> <span class="icon"><img class="img-fluid" src="https://img.icons8.com/emoji/96/000000/sun-emoji.png" /></span>
-          <div class="title">
-            <p>Sydney</p>
-          </div>
-          <div class="temp">+20<sup>&deg;</sup></div>
-          <div class="row">
-            <div class="col-4">
-              <div class="header">General</div>
-              <div class="value">Sunny</div>
+    <div class="weather">
+        <div class="row">
+            <div class=" col-md-6">
+                <div class="card"> <span class="icon"><img class="img-fluid"
+                            src="https://img.icons8.com/emoji/96/000000/sun-emoji.png" /></span>
+                    <div class="title">
+                        <p>Sydney</p>
+                    </div>
+                    <div class="temp">{{ sydney }}<sup>&deg;</sup></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="header">General</div>
+                            <div class="value">Sunny</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Air pollution</div>
+                            <div class="value">47</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Fire</div>
+                            <div class="value">No</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-              <div class="header">Air pollution</div>
-              <div class="value">47</div>
+            <div class="col-md-6">
+                <div class="card"> <span class="icon"><img class="img-fluid"
+                            src="https://img.icons8.com/emoji/96/000000/sun-emoji.png" /></span>
+                    <div class="title">
+                        <p>Melbourne</p>
+                    </div>
+                    <div class="temp">{{ melbourne$ | async }}<sup>&deg;</sup></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="header">General</div>
+                            <div class="value">Sunny</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Air pollution</div>
+                            <div class="value">20</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Fire</div>
+                            <div class="value">No</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-              <div class="header">Fire</div>
-              <div class="value">No</div>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card"> <span class="icon"><img class="img-fluid" src="https://img.icons8.com/emoji/96/000000/sun-emoji.png" /></span>
-          <div class="title">
-            <p>Melbourne</p>
-          </div>
-          <div class="temp">+18<sup>&deg;</sup></div>
-          <div class="row">
-            <div class="col-4">
-              <div class="header">General</div>
-              <div class="value">Sunny</div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card"> <span class="icon"><img
+                            src="https://img.icons8.com/color/50/000000/wind.png" /></span>
+                    <div class="title">
+                        <p>Lithgow</p>
+                    </div>
+                    <div class="temp">{{ lithgow }}<sup>&deg;</sup></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="header">General</div>
+                            <div class="value">Wind</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Air pollution</div>
+                            <div class="value">52</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Fire</div>
+                            <div class="value">No</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-              <div class="header">Air pollution</div>
-              <div class="value">20</div>
+            <div class="col-md-6">
+                <div class="card"> <span class="icon"><img
+                            src="https://img.icons8.com/office/80/000000/partly-cloudy-day.png" /></span>
+                    <div class="title">
+                        <p>Darvin</p>
+                    </div>
+                    <div class="temp">{{darvin$ | async }}<sup>&deg;</sup></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="header">General</div>
+                            <div class="value">Cloudy</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Air pollution</div>
+                            <div class="value">34</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Fire</div>
+                            <div class="value">No</div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-              <div class="header">Fire</div>
-              <div class="value">No</div>
-            </div>
-          </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card"> <span class="icon"><img
+                            src="https://img.icons8.com/color/50/000000/wind.png" /></span>
+                    <div class="title">
+                        <p>Mexico City</p>
+                    </div>
+                    <div class="temp"><sup>{{mexico_city}}&deg;</sup></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="header">General</div>
+                            <div class="value">Wind</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Air pollution</div>
+                            <div class="value">52</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Fire</div>
+                            <div class="value">No</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card"> <span class="icon"><img
+                            src="https://img.icons8.com/office/80/000000/partly-cloudy-day.png" /></span>
+                    <div class="title">
+                        <p>Monterrey</p>
+                    </div>
+                    <div class="temp"><sup>{{monterrey}}&deg;</sup></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="header">General</div>
+                            <div class="value">Cloudy</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Air pollution</div>
+                            <div class="value">34</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="header">Fire</div>
+                            <div class="value">No</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="card"> <span class="icon"><img src="https://img.icons8.com/color/50/000000/wind.png" /></span>
-          <div class="title">
-            <p>Lithgow</p>
-          </div>
-          <div class="temp">+17<sup>&deg;</sup></div>
-          <div class="row">
-            <div class="col-4">
-              <div class="header">General</div>
-              <div class="value">Wind</div>
-            </div>
-            <div class="col-4">
-              <div class="header">Air pollution</div>
-              <div class="value">52</div>
-            </div>
-            <div class="col-4">
-              <div class="header">Fire</div>
-              <div class="value">No</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card"> <span class="icon"><img src="https://img.icons8.com/office/80/000000/partly-cloudy-day.png" /></span>
-          <div class="title">
-            <p>Darvin</p>
-          </div>
-          <div class="temp">+15<sup>&deg;</sup></div>
-          <div class="row">
-            <div class="col-4">
-              <div class="header">General</div>
-              <div class="value">Cloudy</div>
-            </div>
-            <div class="col-4">
-              <div class="header">Air pollution</div>
-              <div class="value">34</div>
-            </div>
-            <div class="col-4">
-              <div class="header">Fire</div>
-              <div class="value">No</div>
-            </div>
-          </div>
-      </div>
-    </div>
-  </div>
-</div>
 </div>
