--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
         </ul>
       </div>
     </nav>
+    <notifier-container></notifier-container>
     <div class="content-wrapper">
       <router-outlet></router-outlet>
       <div class="line"></div>
