--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@
 @import '~quill/dist/quill.core.css';
  @import '~quill/dist/quill.bubble.css';
  @import '~quill/dist/quill.snow.css';
+
+
+
+ @import '~angular-notifier/styles/core.css';
+ @import '~angular-notifier/styles/types/type-error.css';
+ @import '~angular-notifier/styles/types/type-success.css';
+ @import '~angular-notifier/styles/themes/theme-material.css';
