usando el operador map

--- a/src/app/modules/observable/pages/carrito/carrito.component.html
+++ b/src/app/modules/observable/pages/carrito/carrito.component.html
@@ -17,8 +17,8 @@
                         <h3 class="product-card-title font-weight-semibold border-0 pb-0"><a href="#">{{producto.title}}
                                 </a></h3>
                         <div class="font-size-sm"><span class="text-muted mr-2">Size:</span>{{producto.size}}</div>
-                        <div class="font-size-sm"><span class="text-muted mr-2">Color:</span>Black</div>
-                        <div class="font-size-lg text-primary pt-2">{{producto.price}}</div>
+                        <div class="font-size-sm"><span class="text-muted mr-2">Price:</span>{{producto.price}}</div>
+                        <div class="font-size-lg text-primary pt-2">{{producto.amount}}</div>
                     </div>
                 </div>
                 <div class="pt-2 pt-sm-0 pl-sm-3 mx-auto mx-sm-0 text-center text-sm-left" style="max-width: 10rem;">
