servicio de peliculas moviedb

--- a/src/app/modules/observable/pages/carrito/carrito.component.html
+++ b/src/app/modules/observable/pages/carrito/carrito.component.html
@@ -79,7 +79,7 @@
                         </div>
                         <div class="collapse show" id="promocode" data-parent="#cart-accordion">
                             <div class="card-body">
-                                <form class="needs-validation" novalidate="">
+                                <div class="needs-validation" novalidate="">
                                     <div class="form-group">
                                         <input class="form-control" type="text" id="cart-promocode"
                                             placeholder="Promo code" required="">
@@ -87,7 +87,7 @@
                                     </div>
                                     <button class="btn btn-outline-primary btn-block" type="submit">Apply promo
                                         code</button>
-                                </form>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="collapse" id="shipping" data-parent="#cart-accordion">
                             <div class="card-body">
-                                <form class="needs-validation" novalidate="">
+                                <div class="needs-validation" novalidate="">
                                     <div class="form-group">
                                         <select class="form-control custom-select" required="">
                                             <option value="">Choose your country</option>
@@ -141,7 +141,7 @@
                                     </div>
                                     <button class="btn btn-outline-primary btn-block" type="submit">Calculate
                                         shipping</button>
-                                </form>
+                                    </div>
                             </div>
                         </div>
                     </div>
