--- a/src/app/modules/observable/pages/moviedb/moviedb.component.html
+++ b/src/app/modules/observable/pages/moviedb/moviedb.component.html
@@ -10,15 +10,15 @@
 
     <div class="row pb-5 mb-4">
 
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0" *ngFor="let movie of (movies$ | async)">
             <!-- Card-->
             <div class="card rounded shadow-sm border-0">
                 <div class="card-body p-0">
                     <div class="bg-primary px-5 py-4 text-center card-img-top"><img
-                            src="https://d19m59y37dris4.cloudfront.net/university/1-1-1/img/teacher-4.jpg" alt="..."
+                            [src]="movie.poster_path" alt="..."
                             width="100" class="rounded-circle mb-2 img-thumbnail d-block mx-auto">
-                        <h5 class="text-white mb-0">Emma Nevoresky</h5>
-                        <p class="small text-white mb-0">Elite user</p>
+                        <h5 class="text-white mb-0">{{movie.original_title}}</h5>
+                        <p class="small text-white mb-0">{{movie.overview}}</p>
                     </div>
                     <div class="p-4 d-flex justify-content-center">
                         <ul class="list-inline mb-0">
@@ -27,8 +27,8 @@
                                         class="fa fa-picture-o mr-1 text-primary"></i>Photos</small>
                             </li>
                             <li class="list-inline-item">
-                                <h5 class="font-weight-bold mb-0 d-block">84K</h5><small class="text-muted"><i
-                                        class="fa fa-user-circle-o mr-1 text-primary"></i>Followers</small>
+                                <h5 class="font-weight-bold mb-0 d-block">{{movie.popularity}}</h5><small class="text-muted"><i
+                                        class="fa fa-user-circle-o mr-1 text-primary"></i>{{movie.vote_average}}</small>
                             </li>
                         </ul>
                     </div>
@@ -36,82 +36,5 @@
             </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-            <!-- Card-->
-            <div class="card rounded shadow-sm border-0">
-                <div class="card-body p-0">
-                    <div class="bg-success px-5 py-4 text-center card-img-top"><img
-                            src="https://d19m59y37dris4.cloudfront.net/university/1-1-1/img/teacher-2.jpg" alt="..."
-                            width="100" class="rounded-circle mb-2 img-thumbnail d-block mx-auto">
-                        <h5 class="text-white mb-0">Samuel Hardy</h5>
-                        <p class="small text-white mb-0">Elite user</p>
-                    </div>
-                    <div class="p-4 d-flex justify-content-center">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item">
-                                <h5 class="font-weight-bold mb-0 d-block">241</h5><small class="text-muted"><i
-                                        class="fa fa-picture-o mr-1 text-success"></i>Photos</small>
-                            </li>
-                            <li class="list-inline-item">
-                                <h5 class="font-weight-bold mb-0 d-block">84K</h5><small class="text-muted"><i
-                                        class="fa fa-user-circle-o mr-1 text-success"></i>Followers</small>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-            <!-- Card-->
-            <div class="card rounded shadow-sm border-0">
-                <div class="card-body p-0">
-                    <div class="bg-info px-5 py-4 text-center card-img-top"><img
-                            src="https://d19m59y37dris4.cloudfront.net/university/1-1-1/img/teacher-7.jpg" alt="..."
-                            width="100" class="rounded-circle mb-2 img-thumbnail d-block mx-auto">
-                        <h5 class="text-white mb-0">Tom Sunderland</h5>
-                        <p class="small text-white mb-0">Elite user</p>
-                    </div>
-                    <div class="p-4 d-flex justify-content-center">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item">
-                                <h5 class="font-weight-bold mb-0 d-block">241</h5><small class="text-muted"><i
-                                        class="fa fa-picture-o mr-1 text-info"></i>Photos</small>
-                            </li>
-                            <li class="list-inline-item">
-                                <h5 class="font-weight-bold mb-0 d-block">84K</h5><small class="text-muted"><i
-                                        class="fa fa-user-circle-o mr-1 text-info"></i>Followers</small>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-            <!-- Card-->
-            <div class="card rounded shadow-sm border-0">
-                <div class="card-body p-0">
-                    <div class="bg-warning px-5 py-4 text-center card-img-top"><img
-                            src="https://d19m59y37dris4.cloudfront.net/university/1-1-1/img/teacher-1.jpg" alt="..."
-                            width="100" class="rounded-circle mb-2 img-thumbnail d-block mx-auto">
-                        <h5 class="text-white mb-0">John Tarly</h5>
-                        <p class="small text-white mb-0">Elite user</p>
-                    </div>
-                    <div class="p-4 d-flex justify-content-center">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item">
-                                <h5 class="font-weight-bold mb-0 d-block">241</h5><small class="text-muted"><i
-                                        class="fa fa-picture-o mr-1 text-warning"></i>Photos</small>
-                            </li>
-                            <li class="list-inline-item">
-                                <h5 class="font-weight-bold mb-0 d-block">84K</h5><small class="text-muted"><i
-                                        class="fa fa-user-circle-o mr-1 text-warning"></i>Followers</small>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
