agregue el componete de notas en el modulo de observable

--- a/src/app/modules/observable/pages/moviedb/moviedb.component.html
+++ b/src/app/modules/observable/pages/moviedb/moviedb.component.html
@@ -1,4 +1,4 @@
-
+<notes description="Hicimos un buscador donde aplicamos operadores map, switchmap,....."></notes>
 <div class="container py-5">
 
     <div class="input-group mb-5" [formGroup]="formItem">
