--- a/src/app/modules/shared/dashboard/dashboard.component.html
+++ b/src/app/modules/shared/dashboard/dashboard.component.html
@@ -1,11 +1,25 @@
 <main role="main" class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Menu</li>
-            <li class="breadcrumb-item active" aria-current="page">Titulo</li>
+            <li class="breadcrumb-item active" aria-current="page">
+                <ng-content select=".group-title"></ng-content>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+                <ng-content select=".title"></ng-content>
+            </li>
         </ol>
     </nav>
-    <div class="jumbotron">
 
+    <div class="jumbotron">
+        <ng-content select=".header"></ng-content>
+
+    </div>
+
+    <div class="jumbotron">
+        <ng-content select=".body"></ng-content>
+
+    </div>
+    <div class="jumbotron">
+        <ng-content select=".footer"></ng-content>
     </div>
 </main>
