--- a/src/app/modules/template/pages/template/template.component.html
+++ b/src/app/modules/template/pages/template/template.component.html
@@ -1,5 +1,49 @@
 <app-dashboard>
-    <h1>Menu</h1>
-    <h2>Titulo</h2>
-    <div class="main">sdsdf</div>
+
+    <div class="group-title">Inventario</div>
+
+    <div class="title">Salidas de Mercancía</div>
+
+
+    <div class="header">
+        <div class="card">
+            <div class="card-header">
+                Featured
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="body">
+        <div class="card">
+            <div class="card-header">
+                Featured
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">wesdsdfsdf</h5>
+                <p class="card-text">sdfsdfsdfsdsdf</p>
+                <a href="#" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="card">
+            <div class="card-header">
+                Featured
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">hhhhhhhhh</h5>
+                <p class="card-text">hhhhhhhhhhhhh</p>
+                <a href="#" class="btn btn-primary">Go</a>
+            </div>
+        </div>
+    </div>
+
+
 </app-dashboard>
