mapeando el formulario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
 
     </ul>
     <ul class="list-unstyled CTAs">
-      <li> <a href="#" class="download">Subscribe</a> </li>
+      <li> <button  class="btn btn-default" [routerLink]="['/login']">Login</button> </li>
     </ul>
   </nav>
   <div class="content" style="width: 100%;">
