--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,6 +12,7 @@
 
                 <div class="card">
                     <div class="card-body" [formGroup]="formItem">
+                        {{ formItem.get('username').errors | json }}
                         <div class="m-sm-4">
                             <div class="text-center">
                                 <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="Andrew Jones"
@@ -22,6 +23,13 @@
                                     <label>Email</label>
                                     <input formControlName="username" class="form-control form-control-lg" type="email"
                                         name="email" placeholder="Enter your email">
+
+                                        <small *ngIf="(is_valid_username$ | async) === 'INVALID'">El correo es invalido</small>
+
+                                        <small *ngIf="formItem.get('username').errors?.required">El correo es requerido</small>
+                                        <small *ngIf="formItem.get('username').errors?.email">El correo tiene un formato incorrecto</small>
+
+
                                 </div>
                                 <div class="form-group">
                                     <label>Password</label>
