--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,6 +3,8 @@
         <div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
             <div class="d-table-cell align-middle">
 
+                <!--<alert *ngIf="alert"> {{alert}}</alert>-->
+
                 <div class="text-center mt-4">
                     <h1 class="h2">Welcome back, Dey</h1>
                     <p class="lead">
