--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,29 @@
       <li *ngFor="let menu of menus">
 
         <!--Agrupador-->
-        <a href="#{{menu.key}}" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"
-          *ngIf="menu?.children?.length">{{menu.title}}</a>
+
+        <!--Agrupoador -- No ocupa authentificacion-->
+        <a *ngIf="menu?.children?.length && !menu?.required_auth" href="#{{menu.key}}" data-toggle="collapse" aria-expanded="false"
+          class="dropdown-toggle">{{menu.title}}</a>
+        <!--Agrupoador --- Si  ocupa authentificacion-->
+        <a *ngIf="menu?.children?.length && menu?.required_auth && (user$ | async)" href="#{{menu.key}}" data-toggle="collapse"
+          aria-expanded="false" class="dropdown-toggle">{{menu.title}}</a>
+
         <ul class="collapse list-unstyled" [id]="menu.key" *ngIf="menu?.children?.length">
-          <li *ngFor="let child of menu.children"> <a [routerLink]="child.path">{{ child.title }}</a> </li>
+          <li *ngFor="let child of menu.children">
+
+            <!--Las opciones del agrupador-->
+            <a *ngIf="!child?.required_auth" [routerLink]="child.path">{{ child.title }}</a> 
+            <a *ngIf="child?.required_auth && (user$ | async)" [routerLink]="child.path">{{ child.title }}</a> 
+
+          </li>
         </ul>
         <!--No Agrupador-->
-        <a [routerLink]="menu.path" *ngIf="!menu.children">{{menu.title}}</a>
+        <a [routerLink]="menu.path" *ngIf="!menu.children && !menu?.required_auth">{{menu.title}}</a>
+        <a [routerLink]="menu.path" *ngIf="!menu.children && menu?.required_auth && (user$ | async)">{{menu.title}}</a>
+
+        <!--¿Como lo hubiera hecho con observables?  operador user$ mergeMap() menus$ -->
+
       </li>
 
 
@@ -24,8 +40,14 @@
 
     </ul>
     <ul class="list-unstyled CTAs" *ngIf="!(user$ | async)">
-      <li> <button  class="btn btn-default" [routerLink]="['/login']">Login</button> </li>
+      <li> <button class="btn btn-default" [routerLink]="['/login']">Login</button> </li>
     </ul>
+
+    <ul class="list-unstyled CTAs" *ngIf="(user$ | async)">
+      <li> <button class="btn btn-default" (click)="logout()">Logout</button> </li>
+    </ul>
+
+
   </nav>
   <div class="content" style="width: 100%;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +68,9 @@
     <notifier-container></notifier-container>
     <div class="content-wrapper">
       <router-outlet></router-outlet>
+      <!--{{ (user$ | async) | json }}-->
       <div class="line"></div>
     </div>
   </div>
 </div>
+
