--- a/src/app/pages/routing-params/routing-params.component.html
+++ b/src/app/pages/routing-params/routing-params.component.html
@@ -8,10 +8,11 @@
             <div class="profile-header-content">
               <div class="profile-header-img"> <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
               </div>
-              <div class="profile-header-info">
-                <h4 class="m-t-10 m-b-5">Sean Ngu</h4>
+              <div class="profile-header-info" *ngIf="(usuario$ |  async) as user">
+                <h4 class="m-t-10 m-b-5"> {{ user?.profile.email }}</h4>
                 <p class="m-b-10">UXUI + Frontend Developer</p> <a href="#" class="btn btn-xs btn-yellow">Edit
                   Profile</a>
+
               </div>
             </div>
             <ul class="profile-header-tab nav nav-tabs">
